fix events' grid not aligned with timeslots' lines

--- a/styles/weekly-calendar.css
+++ b/styles/weekly-calendar.css
@@ -33,10 +33,33 @@
 }
 
 .timeslot::after {
-    content: "";
+    content: '';
+    position: absolute;
+    left: 0px;
+    width: 100%;
     height: 1px;
     background: black;
+}
+
+#events_container {
+    grid-area: main;
+    display: grid;
+    white-space: nowrap;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(288, 1fr);
+    position: relative; /*devo settare una position perché i figli con position absolute si allacciano al
+                        padre più prossimo che ha la position settata a qualcosa diverso da static(default)*/
+    background: repeating-linear-gradient(
+    to right,
+    transparent 0%,
+    transparent 14.2%,
+    gray 14.3%
+  );
+}
+
+.event_box {
+    grid-column: 2;
+    grid-row: 37;
+    background-color: red;
     position: absolute;
-    width: 100%;
-    left:0;
 }
